week10-netpolicy/service-api.yaml
apiVersion: v1
kind: Service
metadata:
  name: api
  namespace: venus
spec:
  selector:
    app: api
  ports:
  - name: tcp-2222
    port: 2222
    targetPort: 2222
  type: ClusterIP
