week10-netpolicy/service-frontend.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: venus
spec:
  selector:
    app: frontend
  ports:
  - name: http
    port: 80
    targetPort: 80
  type: ClusterIP
